Adjusts CSS to fix theater mode issue when screen is still large, adjusts subtitles for readability, and removes the hidden playState value that was causing the adskip bug

--- a/NewStyles.css
+++ b/NewStyles.css
@@ -875,7 +875,7 @@ margin: 1%;
 .player_mobile
 {
     width: 100%;
-    height: auto;
+    height: 68%;
 }
 
 #browser {
@@ -1450,9 +1450,9 @@ hr {
 #subtitle_wrapper
 {
     top:75%;
-    right:30%;
+    right:25%;
     bottom:10%;
-    left:30%;
+    left:25%;
     position: absolute;
     opacity: .9;
     pointer-events: none;
@@ -1460,19 +1460,19 @@ hr {
 
 #subtitleText
 {
-    background-color: black;
+    background-color: rgba(0,0,0,0.4);
     color: white;
-    text-align: justify;
+    text-align: center;
 }
 
 .subtitleText_standardscreen
 {
-    font-size: 1.6em;
+    font-size: 2em;
 }
 
 .subtitleText_fullscreen
 {
-    font-size: 2.1em;
+    font-size: 3em;
 }
 
 /* 
